update html and css

--- a/index.html
+++ b/index.html
@@ -96,15 +96,21 @@
       </div>
       <div class="tool-section">
         <div class="left">
-          <img src="./images/icon-blacklist.svg" alt="" />
+          <img
+            class="icon-blacklist-image"
+            src="./images/icon-blacklist.svg"
+            alt=""
+          />
+
           <h4>Create blacklist</h4>
-          <p class="tool-paragraph">
+          <p class="tool-paragraph blacklist-paragraph">
             Ensure sensitive information never makes its way to your clipboard
             by excluding certain sources.
           </p>
         </div>
         <div class="middle">
           <img src="./images/icon-text.svg" alt="" />
+
           <h4>Plain text snippets</h4>
           <p class="tool-paragraph">
             Remowe unwanted formating from copied text for a consistent look.
