update html and css

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
       <div class="snippet-info">
         <h2>Access Clipboard anywhere</h2>
-        <p>
+        <p class="snippet-paragraph">
           Whether you’re on the go, or at your computer, you can access all your
           Clipboard snippets in a few simple clicks.
         </p>
@@ -92,7 +92,9 @@
       </div>
       <div class="snippet-info workflow-info">
         <h2>Supercharge your workflow</h2>
-        <p>We’ve got the tools to boost your productivity.</p>
+        <p class="snippet-paragraph">
+          We’ve got the tools to boost your productivity.
+        </p>
       </div>
       <div class="tool-section">
         <div class="left">
@@ -124,6 +126,39 @@
           </p>
         </div>
       </div>
+      <div class="company-section">
+        <img src="./images/logo-google.png" alt="" />
+        <img src="./images/logo-ibm.png" alt="" />
+        <img src="./images/logo-microsoft.png" alt="" />
+        <img src="./images/logo-hp.png" alt="" />
+        <img src="./images/logo-vector-graphics.png" alt="" />
+      </div>
+      <div class="snippet-info">
+        <h2>Clipboard for iOS and Mac OS</h2>
+        <p class="snippet-paragraph">
+          Available for free on the App Store. Download for Mac or iOS, sync
+          with iCloud and you’re ready to start adding to your clipboard.
+        </p>
+        <button class="button ios-button">Download for iOS</button>
+        <button class="button mac-button">Download for Mac</button>
+      </div>
     </main>
+    <footer>
+      <div class="left-side">
+        <img class="footer-logo" src="./images/logo.svg" alt="" />
+      </div>
+      <div class="middle-side">
+        <div>
+          <a href="#">FAQs</a>
+          <a href="#"> Privacy Policy</a>
+          <a href="#">Install Guide</a>
+        </div>
+        <div>
+          <a href="#">Contact Us</a>
+          <a href="#"> Press Kit</a>
+        </div>
+      </div>
+      <div class="right-side">desno</div>
+    </footer>
   </body>
 </html>
