--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div class="snippet-info">
-        <h2>Access Clipboard anywhere</h2>
+        <h2>Access Clipboard Anywhere</h2>
         <p class="snippet-paragraph">
           Whether you’re on the go, or at your computer, you can access all your
           Clipboard snippets in a few simple clicks.
@@ -127,11 +127,15 @@
         </div>
       </div>
       <div class="company-section">
-        <img src="./images/logo-google.png" alt="" />
-        <img src="./images/logo-ibm.png" alt="" />
-        <img src="./images/logo-microsoft.png" alt="" />
-        <img src="./images/logo-hp.png" alt="" />
-        <img src="./images/logo-vector-graphics.png" alt="" />
+        <img class="company-logo" src="./images/logo-google.png" alt="" />
+        <img class="company-logo" src="./images/logo-ibm.png" alt="" />
+        <img class="company-logo" src="./images/logo-microsoft.png" alt="" />
+        <img class="company-logo" src="./images/logo-hp.png" alt="" />
+        <img
+          class="company-logo"
+          src="./images/logo-vector-graphics.png"
+          alt=""
+        />
       </div>
       <div class="snippet-info">
         <h2>Clipboard for iOS and Mac OS</h2>
@@ -148,17 +152,30 @@
         <img class="footer-logo" src="./images/logo.svg" alt="" />
       </div>
       <div class="middle-side">
-        <div>
+        <div class="middle-side-item">
           <a href="#">FAQs</a>
-          <a href="#"> Privacy Policy</a>
-          <a href="#">Install Guide</a>
-        </div>
-        <div>
           <a href="#">Contact Us</a>
+        </div>
+        <div class="middle-side-item">
+          <a href="#"> Privacy Policy</a>
           <a href="#"> Press Kit</a>
         </div>
+        <div><a href="#">Install Guide</a></div>
       </div>
-      <div class="right-side">desno</div>
+      <div class="right-side">
+        <ion-icon name="logo-facebook"></ion-icon>
+        <ion-icon name="logo-twitter"></ion-icon>
+        <ion-icon name="logo-instagram"></ion-icon>
+      </div>
     </footer>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
